--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -184,6 +184,44 @@ table{
     display: none;
 }
 
+#search{
+    border: 1px solid black;
+}
+#search input{
+    height: 100%;
+
+    padding: 5px;
+}
+#search select{
+    height: 100%;
+    border-right: 1px solid black;
+}
+#search button {
+    height: 100%;
+    padding: 5px 10px;
+    background-color: blue;
+    color:  white;
+}
+#toast_search_delete{
+    width: 300px;
+    z-index: 999;
+    height: auto;
+    position: fixed;
+    left: 50%;
+    top: 300px;
+    transform: translate(-50%,-50%);
+    display: none;
+}
+#toast_search_update{
+    width: 600px;
+    z-index: 999;
+    height: auto;
+    position: fixed;
+    left: 50%;
+    top: 400px;
+    transform: translate(-50%,-50%);
+    display: none;
+}
 @keyframes fade {
     0%{
         display: block;
