--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -9,7 +9,11 @@ body{
     background-attachment: fixed;
     background-size: cover;
     position: relative;
+    min-height: 100vh;
+
+    overflow: auto; /* Enable scrolling */
 }
+
 .card_room {
     position: relative;
     height: auto !important;
@@ -174,6 +178,48 @@ table{
     right: 0;
     background-color: rgb(255, 255, 255);
 }
+/* The table container with scrolling */
+.table_user_container {
+    max-height: 75vh;  /* Adjust this based on your needs */
+    overflow: auto; /* Enable both vertical and horizontal scrolling */
+    position: relative; /* Required for sticky elements to work */
+}
+
+/* Table Styles */
+.standard-table {
+    width: 100%;
+    border-collapse: collapse;
+}
+
+/* Sticky Header */
+.standard-table thead {
+    position: sticky;
+    top: 0;
+    z-index: 3; /* Ensure the header is above the table body */
+
+}
+
+/* Sticky Last Column */
+.standard-table td:last-child, .standard-table th:last-child {
+    position: sticky;
+    right: 0;
+    background-color: white; /* Background for the sticky last column */
+    z-index: 2; /* Keep it on top of other table cells */
+}
+
+/* Table Cell Styling */
+.standard-table td, .standard-table th {
+
+    padding: 8px;
+    text-align: left;
+}
+
+/* Optional: Style the header */
+.standard-table thead th {
+    text-align: center;
+    font-weight: bold;
+}
+
 .day{
     min-height: 80px;
 }
@@ -219,8 +265,16 @@ table{
     position: fixed;
     left: 50%;
     top: 400px;
+   
     transform: translate(-50%,-50%);
     display: none;
+}
+
+.float_btn button{
+    background-color: green;
+    padding: 5px 10px;
+    border-radius: 5px;
+    color: white;
 }
 @keyframes fade {
     0%{
@@ -245,6 +299,9 @@ table{
     }
 }
 @media  (max-width: 430px) {
+    body{
+        padding: 0 5px;
+    }
     .input_book{
         width: 300px;
         height: auto;
@@ -279,6 +336,18 @@ table{
     }
     .day{
         min-height: 30px;
+    }
+    .phone_respond{
+        display: flex !important;
+        flex-direction: column;
+    }
+    #table_user_container {
+        max-height: 65vh;  /* Adjust this based on your needs */
+
+    }
+    #toast_search_update{
+        width: 300px;
+        overflow: visible;
     }
 }
 @media  (min-width: 1280px  )  and (max-width: 1440px){
