remove internet source

--- a/public/assets/css/backend.css
+++ b/public/assets/css/backend.css
@@ -1,5 +1,5 @@
 
-@import url('https://fonts.googleapis.com/css2?family=Noto+Serif+Khmer&display=swap');
+@import url('/assets/css/font.css');
 
 
 
@@ -13,7 +13,7 @@
 #main{
     min-height: 100vh;
 
-    background: url('https://img.freepik.com/free-vector/blue-curve-background_53876-113112.jpg');
+    background: url('/assets/startic_img/blue-curve-background_53876-113112.avif');
     background-position: center;
     background-attachment: fixed;
     background-size: cover;
