--- a/public/assets/css/backend.css
+++ b/public/assets/css/backend.css
@@ -57,7 +57,7 @@
 #main{
     min-height: 100vh;
 
-    background: url('/assets/startic_img/blue-curve-background_53876-113112.avif');
+    background: url('/assets/startic_img/test.jpg');
     background-position: center;
     background-attachment: fixed;
     background-size: cover;
