--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -55,7 +55,7 @@
 }
 body{
 
-    background: url('/assets/startic_img/blue-curve-background_53876-113112.avif');
+    background: url('/assets/startic_img/test.jpg');
     background-position: center;
     background-attachment: fixed;
     background-size: cover;
@@ -164,7 +164,7 @@ body{
 }
 #main{
     min-height: 100vh;
-    background: url('/assets/startic_img/blue-curve-background_53876-113112.avif');
+    background: url('/assets/startic_img/test.jpg');
     background-position: center;
     background-attachment: fixed;
     background-size: cover;
